--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,14 @@
   font-family: "Exo", sans-serif;
 }
 
-header {
-  text-align: center;
-  padding: 10px 0;
-  background-color: #022e5d;
-  color: white;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
+body {
+  background-color: #a0a0a0;
 }
 
 main {
   display: flex;
   justify-content: center;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 .container {
@@ -28,9 +21,8 @@ main {
   height: auto;
   padding: 10px;
   margin-top: 10px;
-  border-radius: 8px;
-  box-shadow: 0px 5px 10px #cfe3ee;
-  border: 0.5px solid #cfe3ee;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px #504f4f;
   margin-bottom: 60px;
 }
 
@@ -44,9 +36,15 @@ main {
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 5px 0 0 5px;
-  box-shadow: 0px 5px 10px #cfe3ee;
-  border: 0.5px solid #cfe3ee;
+  /* box-shadow: 0px 5px 10px #504f4f; */
   border-radius: 5px;
+  border: none;
+  background-color: #e3ebf0;
+}
+
+.textarea:focus {
+  outline: none;
+  box-shadow: 0px 0px 5px #504f4f;
 }
 
 .btn {
@@ -73,7 +71,7 @@ main {
 }
 
 hr {
-  border: 1px dashed #9cc5f0;
+  border: 1px dashed #a0a0a0;
 }
 
 .container article {
@@ -105,4 +103,61 @@ footer {
   bottom: 0;
   right: 0;
   left: 0;
+}
+
+.custom-alert {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.custom-alert-content {
+  background-color: #fefefe;
+  margin-left: 30rem;
+  margin-top: 20rem;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  border-radius: 8px;
+  position: relative;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  border: none;
+  background-color: white;
+  padding: 0;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#alertMessage {
+  color: #022e5d;
+}
+
+@media (max-width: 720px) {
+  .container {
+    width: 70%;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    width: 90%;
+  }
 }
